--- a/index.html
+++ b/index.html
@@ -173,7 +173,12 @@
 </head>
 <body>
 <header>
-  <div class="logo">Cabinet Avocat Stoica Ioana</div>
+  <div class="logo">
+    Cabinet Avocat Stoica Ioana
+    <div class="site-link">
+      <a href="https://www.avocatstoicaioana.ro" target="_blank">www.avocatstoicaioana.ro</a>
+    </div>
+  </div>
  <nav>
     <a href="./">Acasă</a>
 <a href="despre.html">Despre</a>
