--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,10 @@
       font-size: 1.5rem;
       font-weight: 700;
     }
+    nav {
+      display: flex;
+      align-items: center;
+    }
     nav a {
       margin-left: 30px;
       font-weight: 600;
@@ -46,10 +50,29 @@
       color: #ffd700;
       text-transform: uppercase;
       letter-spacing: 1px;
+      white-space: nowrap;
     }
     nav a:hover {
       color: #f0c64c;
     }
+
+    /* BUTON BURGER - ascuns implicit */
+    .burger {
+      display: none;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 25px;
+      height: 22px;
+      cursor: pointer;
+    }
+    .burger div {
+      width: 100%;
+      height: 3px;
+      background-color: #ffd700;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+
     main {
       max-width: 700px;
       margin: 100px auto 50px auto;
@@ -143,6 +166,8 @@
         transform: translateY(0);
       }
     }
+
+    /* MEDIA QUERY PENTRU BURGER */
     @media (max-width: 768px) {
       main {
         margin: 120px 15px 40px 15px;
@@ -151,9 +176,30 @@
       h1 {
         font-size: 2rem;
       }
+      nav {
+        position: fixed;
+        top: 60px;
+        right: 0;
+        background-color: #012A4A;
+        flex-direction: column;
+        width: 200px;
+        padding: 15px 0;
+        transform: translateX(100%);
+        transition: transform 0.3s ease;
+        box-shadow: -2px 0 8px rgba(0,0,0,0.3);
+        height: calc(100vh - 60px);
+        z-index: 998;
+      }
+      nav.active {
+        transform: translateX(0);
+      }
       nav a {
-        margin-left: 15px;
-        font-size: 0.9rem;
+        margin: 15px 20px;
+        font-size: 1.1rem;
+      }
+      /* Arătăm butonul burger pe mobil */
+      .burger {
+        display: flex;
       }
     }
   </style>
@@ -161,12 +207,19 @@
 <body>
 <header>
   <div class="logo">Cabinetul Stoica Ioana – Avocat</div>
-  <nav>
-<a href="./">Acasă</a>
-<a href="despre.html">Despre</a>
-<a href="servicii.html">Servicii</a>
-<a href="valori-angajament.html">Valori-angajament</a>
-<a href="contact.html">Contact</a>
+  <!-- Buton burger -->
+  <div class="burger" id="burger">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+  <nav id="menu">
+    <a href="index.html">Acasă</a>
+    <a href="despre.html">Despre</a>
+    <a href="servicii.html">Servicii</a>
+    <a href="valori-angajament.html">Valori-angajament</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
 
@@ -189,11 +242,11 @@
   </form>
 
   <div class="contact-info">
-  <p><strong>Telefon:</strong> +40 730 735 302</p>
-  <p><strong>Email:</strong> stoica.juridic@yahoo.com</p>
-  <p><strong>Adresă:</strong> Str. Primăverii, nr. 55, Constanța</p>
-  <p><strong>Resurse utile:</strong> <a href="https://www.avocatnet.ro" target="_blank">www.avocatnet.ro</a></p>
-</div>
+    <p><strong>Telefon:</strong> +40 730 735 302</p>
+    <p><strong>Email:</strong> stoica.juridic@yahoo.com</p>
+    <p><strong>Adresă:</strong> Str. Primăverii, nr. 55, Constanța</p>
+    <p><strong>Resurse utile:</strong> <a href="https://www.avocatnet.ro" target="_blank">www.avocatnet.ro</a></p>
+  </div>
 </main>
 
 <footer>
@@ -217,6 +270,15 @@
 <script>
   window.addEventListener('load', () => {
     document.querySelector('main').style.opacity = 1;
+  });
+
+  // Toggle meniu burger
+  const burger = document.getElementById('burger');
+  const menu = document.getElementById('menu');
+
+  burger.addEventListener('click', () => {
+    menu.classList.toggle('active');
+    burger.classList.toggle('active');
   });
 </script>
 </body>
