--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
 
 <section class="hero" role="img" aria-label="Imagine avocatură">
   <div class="overlay">
-    <h1>Domenii de drept </h1>
-    <p>„Ubi lex, ibi remedium.”</p>
+    <h1>„Ubi lex, ibi remedium.”</h1>
     <div class="site-link">
       <a href="https://www.avocatstoicaioana.ro" target="_blank" rel="noopener noreferrer">www.avocatstoicaioana.ro</a>
     </div>
