--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
 </head>
 <body>
 <header>
-  <div class="logo">
-    Cabinet Avocat Stoica Ioana
-  </div>
+  <div class="logo" style="font-size: 1rem;">
+  Cabinet Avocat Stoica Ioana
+</div>
 
   <!-- Iconița burger -->
   <div class="burger" id="burger" aria-label="Meniu mobil" role="button" tabindex="0">
