--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   <div class="overlay">
     <h1>„Ubi lex, ibi remedium.”</h1>
     <div class="site-link">
-      <a href="https://www.avocatstoicaioana.ro" target="_blank" rel="noopener noreferrer">www.avocatstoicaioana.ro</a>
+      <a href="https://www.avocatnet.ro" target="_blank">www.avocatnet.ro</a></p>
     </div>
   </div>
 </section>
