--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <div class="overlay">
     <h1>„Ubi lex, ibi remedium.”</h1>
     <div class="site-link">
-      <a href="https://www.avocatnet.ro" target="_blank" rel="noopener noreferrer">www.avocatnet.ro</a>
+      <p><strong>Consultanță pe:</strong> <a href="https://www.avocatnet.ro" target="_blank">www.avocatnet.ro</a></p>
     </div>
   </div>
 </section>
